--- a/251-BIPC-INDEX.html
+++ b/251-BIPC-INDEX.html
@@ -440,14 +440,8 @@
     <h2>🏆 Medical Entrance Exams</h2>
     <div class="grid">
         <a href="#" class="box"><i class="fas fa-heartbeat"></i>NEET UG</a>
-        <a href="#" class="box"><i class="fas fa-hospital"></i>AIIMS MBBS</a>
-        <a href="#" class="box"><i class="fas fa-stethoscope"></i>JIPMER MBBS</a>
-        <a href="#" class="box"><i class="fas fa-pills"></i>BITSAT</a>
-        <a href="#" class="box"><i class="fas fa-clipboard-list"></i>CUET</a>
-        <a href="#" class="box"><i class="fas fa-user-md"></i>Manipal MET</a>
-        <a href="#" class="box"><i class="fas fa-building"></i>SRMJEEE</a>
-        <a href="#" class="box"><i class="fas fa-user-shield"></i>VITEEE</a>
-        <a href="#" class="box"><i class="fas fa-graduation-cap"></i>Amrita AEEE</a>
+        <a href="#" class="box"><i class="fas fa-hospital"></i>TS EAPCET</a>
+        
     </div>
 
     <h2>🎯 Career Paths</h2>
@@ -491,12 +485,7 @@
         </a>
     </div>
 
-    <div class="buttons">
-        <a href="mpc.html"><button class="next-btn">⬅️ MPC</button></a>
-        <a href="cec.html"><button class="next-btn">CEC ➡️</button></a>
-        <a href="index.html"><button class="home-btn">🏠 Back to Home</button></a>
-    </div>
-</div>
+
 
 <!-- Video Section -->
 <div class="video-section">
