--- a/index-intermediate.html
+++ b/index-intermediate.html
@@ -550,7 +550,7 @@
       <a href="250-MPC-INDEX.HTML" class="box"><i class="fas fa-calculator"></i>MPC (Maths)</a>
       <a href="251-BIPC-INDEX.html" class="box"><i class="fas fa-dna"></i>BiPC (Biology)</a>
       <a href="250-CEC-INDEX.HTML" class="box"><i class="fas fa-chart-line"></i>CEC (Commerce)</a>
-      <a href="252-MEC.HTML" class="box"><i class="fas fa-book"></i>MEC (Economics)</a>
+      <a href="MEC-INDEX.HTML" class="box"><i class="fas fa-book"></i>MEC (Economics)</a>
       <a href="#" class="box"><i class="fas fa-language"></i>HEC (Humanities)</a>
       <a href="#" class="box"><i class="fas fa-university"></i>Top Colleges</a>
       <a href="#" class="box"><i class="fas fa-file-alt"></i>Admission Info</a>
