--- a/250-MPC-INDEX.HTML
+++ b/250-MPC-INDEX.HTML
@@ -429,7 +429,7 @@
         <a href="255-SECOUND-LANGUAGE.HTML" class="box"><i class="fas fa-university"></i>SECOND LANGUAGE</a>
     </div>
 
-    <h2>🏆 Competitive Exams</h2>
+    <h2>🏆 Competitive Exams(Entrance for engineering)</h2>
     <div class="grid">
         <a href="10jee_mains.html" class="box"><i class="fas fa-laptop-code"></i>JEE MAINS</a>
         <a href="10JEE-ADVANCE-EXAM.html" class="box"><i class="fas fa-vial"></i>JEE ADVANCED</a>
@@ -451,7 +451,7 @@
       
     </div>
 
-    <h2>🏫 Top Colleges</h2>
+    <h2>🏫 Top Colleges (After inter )</h2>
     <div class="grid">
         <a href="23-IIT-index.html" class="box"><i class="fas fa-tools"></i>IIT</a>
         <a href="23-nit-index.html" class="box"><i class="fas fa-flask"></i>NIT</a>
