--- a/MEC-INDEX.HTML
+++ b/MEC-INDEX.HTML
@@ -420,13 +420,13 @@
     <p><i class="fas fa-chart-line"></i> <strong>Economics:</strong> Studies market dynamics, economic theories, and financial systems - crucial for careers in finance and policy-making.</p>
     <p><i class="fas fa-file-invoice-dollar"></i> <strong>Commerce:</strong> Covers accounting, business studies, and financial management - foundational for business careers.</p>
 
-    <div class="grid">
+   <div class="grid">
         <a href="MATHS-A.HTML" class="box"><i class="fas fa-calculator"></i>Maths-A</a>
         <a href="MATHS-B.HTML" class="box"><i class="fas fa-calculator"></i>Maths-B</a>
         <a href="Economic-index.html" class="box"><i class="fas fa-chart-line"></i>Economics</a>
         <a href="Commerce-index.html" class="box"><i class="fas fa-file-invoice-dollar"></i>Commerce</a>
-        <a href="#" class="box"><i class="fas fa-language"></i>English</a>
-        <a href="#" class="box"><i class="fas fa-university"></i>Second Language</a>
+        <a href="english-index.html" class="box"><i class="fas fa-language"></i>English</a>
+        <a href="sanskrit-index.html" class="box"><i class="fas fa-university"></i>Second Language</a>
         
     </div>
 
