--- a/index.html
+++ b/index.html
@@ -868,14 +868,12 @@
   <script>
   const updates = [
    
-    {
-      text: "📢EAPCET 2024 CUT OFF'S RESORCES",
-      link: "150-eapcet-cut-offs.html"
-    },
-    {
-      text: "🎯 TS COLLEGE INDEX",
-      link: "index-ts-college.html"
-    },
+     {
+  text: "📢TS EAPCET Schedule",
+  link: "ts-eapcet-schedule.html"
+},
+
+
 
   ];
 
