--- a/index-intermediate.html
+++ b/index-intermediate.html
@@ -551,12 +551,8 @@
       <a href="251-BIPC-INDEX.html" class="box"><i class="fas fa-dna"></i>BiPC (Biology)</a>
       <a href="250-CEC-INDEX.HTML" class="box"><i class="fas fa-chart-line"></i>CEC (Commerce)</a>
       <a href="MEC-INDEX.HTML" class="box"><i class="fas fa-book"></i>MEC (Economics)</a>
-      <a href="#" class="box"><i class="fas fa-language"></i>HEC (Humanities)</a>
-      <a href="#" class="box"><i class="fas fa-university"></i>Top Colleges</a>
-      <a href="#" class="box"><i class="fas fa-file-alt"></i>Admission Info</a>
-      <a href="#" class="box"><i class="fas fa-comments"></i>Counseling</a>
-      <a href="#" class="box"><i class="fas fa-graduation-cap"></i>Career Paths</a>
-      <a href="#" class="box"><i class="fas fa-chart-bar"></i>Results</a>
+      <a href="HEC-INDEX01.HTML" class="box"><i class="fas fa-language"></i>HEC (Humanities)</a>
+      
     </div>
   </div>
 
