--- a/index.html
+++ b/index.html
@@ -1081,9 +1081,9 @@
     <div class="footer-bottom">
       <p>&copy; 2025 <strong>Balanju.com</strong> — Educational & Career Support.</p>
       <div class="legal-links">
-        <a href="#">About</a>
-        <a href="#">Privacy Policy</a>
-        <a href="#">Terms of Use</a>
+        <a href="about.html">About</a>
+        <a href="privacy-policy.html">Privacy Policy</a>
+        
       </div>
     </div>
   </div>
