--- a/index-engineering.html
+++ b/index-engineering.html
@@ -376,32 +376,33 @@
   <section>
     <h2>🏛️Top National Exams</h2>
     <div class="menu">
-      <a href="10JEE-ADVANCE-EXAM.html">📘 JEE Advanced</a>
-      <a href="JEE.INDEX.html">📘 JEE Main</a>
-      <a href="10BITSAT.html">📊 BITSAT</a>
-      <a href="10VITEEE-EXAM.html">🔬 VITEEE</a>
-      <a href="10SMJEEE.html">🧭 SRMJEEE</a>
-      <a href="10MET-MANIPAL-EXAM.HTML">🛡️ MET (Manipal)</a>
-      <a href="10amity-EXAM.html">🏛️ Amity JEE / UPES</a>
+      <a href="JEE ADVANCE/JEE ADVANCE-index.html">📘 JEE Advanced</a>
+      <a href="JEE MAINS/JEE.INDEX.html">📘 JEE Main</a>
+      <a href="BITSAT/BITSAT-INDEX-PAGE.html">📊 BITSAT</a>
+      <a href="VITEEE/VITEEE-MAIN-INDEX.html">🔬 VITEEE</a>
+      <a href="🧭 SRMJEEE/SRMJEEE-MAIN-INDEX.html">🧭 SRMJEEE</a>
+      <a href="🛡️ MET (Manipal)/MET-Manipal-INDEX.html">🛡️ MET (Manipal)</a>
+      <a href="Amity exam/AMITY--MAIN-INDEX.html">🏛️ Amity JEE / UPES</a>
+      <a href="UPES/UPES-MAIN-INDEX.html">🏛️UPES</a>
     </div>
   </section>
 
   <section>
     <h2>🗺️ State-Level Exams</h2>
     <div class="menu">
-      <a href="11TS-EAPCET-EXAM.html">🌇 TS EAMCET [Telangana]</a>
+      <a href="TS-EAPCET/TS-INDEX01.HTML">🌇 TS EAMCET [Telangana]</a>
       <a href="AP EAPCET/AP-EAPCET-MAIN-INDEX.html">🏙️ AP EAPCET [Andhra Pradesh]</a>
-      <a href="11MHTCET-MAHARASTHA-EXAM.HTML">🏞️ MHT CET [Maharashtra]</a>
-      <a href="11KCET-KARNATAKA-EXAM.html">🏔️ KCET [Karnataka]</a>
-      <a href="11KEAM-KERALA-EXAM.html">🌆 KEAM [Kerala]</a>
-      <a href="11WBJEE-BENGAL-EXAM.HTML">🏯 WBJEE [West Bengal]</a>
-      <a href="11GUJCET-GUJARATH-EXAM.html">🌁 GUJCET [Gujarat]</a>
-      <a href="11REAP-RAJASTHAN-EXAM.html">🛤️ REAP [Rajasthan]</a>
-      <a href="11UPCET-UTTHAR.html">🏞️ UPCET [Uttar Pradesh]</a>
-      <a href="11BCECE-BIHAR-EXAM.html">🕌 BCECE [Bihar]</a>
-      <a href="11cgpet-Chhattisgarh-EXAM.html">🕍 CG PET [Chhattisgarh]</a>
-      <a href="11OJEE-EXAM.html">🛕 OJEE [Odisha]</a>
-      <a href="11jcece-JARKHAND.EXAM.html">🛶 JCECE [Jharkhand]</a>
+      <a href="maharasta cet/MAHA-CET-MAIN-INDEX.html">🏞️ MHT CET [Maharashtra]</a>
+      <a href="KCET Karnataka/KCET-main-index.html">🏔️ KCET [Karnataka]</a>
+      <a href="KEAM KERALA/KEAM-main-index.html">🌆 KEAM [Kerala]</a>
+      <a href="WEST BENGAL/WBJEE-MAIN-INDEX.html">🏯 WBJEE [West Bengal]</a>
+      <a href="GUJARATH CET/GUJCET-MAIN-INDEX.html">🌁 GUJCET [Gujarat]</a>
+      <a href="RAJASTHAN-CET/RAJASTHAN-CET-main-index.html">🛤️ REAP [Rajasthan]</a>
+      <a href="UPCET UP/UPCET-MAIN-INDEX.html">🏞️ UPCET [Uttar Pradesh]</a>
+      <a href="BIHAR/BCECE-MAIN-INDEX.html">🕌 BCECE [Bihar]</a>
+      <a href="CHHATTISGARH/CG PET-MAIN-INDEX.html">🕍 CG PET [Chhattisgarh]</a>
+      <a href="ODISHA/OJEE-MAIN-INDEX.html">🛕 OJEE [Odisha]</a>
+      <a href="JHARKHAND/JCECE-MAIN-INDEX.html">🛶 JCECE [Jharkhand]</a>
     </div>
   </section>
 
