--- a/index-engineering.html
+++ b/index-engineering.html
@@ -390,7 +390,7 @@
   <section>
     <h2>🗺️ State-Level Exams</h2>
     <div class="menu">
-      <a href="TS-EAPCET/TS-INDEX01.HTML">🌇 TS EAMCET [Telangana]</a>
+      <a href="TS-EAPCET/eapcet-main-index.html">🌇 TS EAMCET [Telangana]</a>
       <a href="AP EAPCET/AP-EAPCET-MAIN-INDEX.html">🏙️ AP EAPCET [Andhra Pradesh]</a>
       <a href="maharasta cet/MAHA-CET-MAIN-INDEX.html">🏞️ MHT CET [Maharashtra]</a>
       <a href="KCET Karnataka/KCET-main-index.html">🏔️ KCET [Karnataka]</a>
