--- a/index-ts-college.html
+++ b/index-ts-college.html
@@ -452,9 +452,9 @@
       <div class="circle-icon">🔮</div>
       <span> College Predictor</span>
     </a>
-    <a href="200-ts-top20-college.html" class="circle-btn" style="--color: #fb8c00;">
+    <a href="TS-EAPCET/ENGI-TOP-50-COLLEGE.html" class="circle-btn" style="--color: #fb8c00;">
       <div class="circle-icon">🏫</div>
-      <span>TOP 20 Colleges </span>
+      <span>TOP 50 Colleges </span>
     </a>
   </div>
 </div>
